# Homework_19.2

./: README.md  pyproject.toml
catalog/: urls.py  views.py
config/: settings.py  urls.py
