[tool.poetry]
name = "homework_19.2"
version = "0.1.0"
description = ""
authors = ["Vladimir Blyntsev <blyncev@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
